<resources>
    <string name="app_name">Shunel</string>
    <!-- FB-->
    <string name="facebook_app_id">192713442172647</string>
    <string name="fb_login_protocol_scheme">fb192713442172647</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 建立標籤字串-->
    <string name="Popular_product">熱門</string>
    <string name="Promotion">促銷</string>
    <string name="All">全部</string>
    <string name="Perfume_necklace">香氛項鍊</string>
    <string name="Fragrance_earrings">香氛耳環</string>
    <string name="Necklace">項鍊</string>
    <string name="Earrings">耳環</string>
    <string name="Ring">戒指</string>

    <string name="typename">請輸入文字</string>
    <string name="typepassword">請輸入密碼</string>
    <string name="confirmpassword">請再次輸入密碼</string>
    <string name="login">登入</string>
    <string name="myfavorite">追蹤清單</string>
    <string name="chat">提問</string>
    <string name="orderlist">訂單詳情</string>
    <string name="history">瀏覽紀錄</string>

    <string name="pushOnOff"> 推播通知</string>
    <string name="modify_information">資料修改</string>
    <string name="app_specification">APP規範</string>
    <string name="APP_version">App版本</string>
    <string name="sign_out">登出</string>
    <string name="setting">設定</string>

    <string name="typephonenumber">請輸入手機號碼</string>
    <string name="retypePassword">請再次輸入密碼</string>
    <string name="register">5j4hk4</string>
    <string name="registerNow">立即註冊</string>
    <string name="forgetPassword">忘記密碼</string>
    <string name="sendVCode">寄送驗證碼</string>
    <string name="typeNewPassword">請輸入新密碼</string>
    <string name="typeNewPassword2">請再次輸入新密碼</string>
    <string name="send">送出</string>


    <string name="tvOrderHisTitle">訂單詳情</string>
    <string name="textOrderStatusText">訂購狀態：</string>
    <string name="textNotYetPayed">未付款</string>
    <string name="textNotYetDelivered">未出貨</string>
    <string name="textDelivered">已出貨</string>
    <string name="textReceived">已送達</string>
    <string name="textCanceled">已取消</string>
    <string name="textRefunds">已退貨</string>
    <string name="textOrderNum" />
    <string name="textOrderStatus" />
    <string name="textTotalPriceText">總金額：$</string>
    <string name="textTotalPrice" />
    <string name="textReceivePersonT">收貨人資料：</string>
    <string name="textNameT">姓名：</string>
    <string name="textReceiverTitle">收件人資料：</string>
    <string name="textName" />
    <string name="textHint">null</string>
    <string name="textOrderId" />
    <string name="textOrderIdText">訂單編號：</string>
    <string name="textPhoneNumT">手機：</string>
    <string name="textPhoneNum" />
    <string name="textOrderDAddressT">地址：</string>
    <string name="textAddress" />
    <string name="textProductName" />
    <string name="textProductPriceT">售價：</string>
    <string name="textProductPrice" />

    <string name="textVCode">驗證碼輸入</string>
    <string name="textVCodeMessage">您的帳號可能存在安全風險。為了確保為您本人操作，請先輸入手機收到之安全驗證碼。</string>
    <string name="textYes">確認</string>
    <string name="textNo">取消</string>
    <string name="textPhonenumberEmpty">電話為空值</string>
    <string name="textPasswordEmpty">密碼為空值</string>
    <string name="textPhonenumberOrPasswordEmpty">電話或密碼為空值</string>
    <string name="textLogin">登入</string>

    <string name="news">最新消息</string>
    <string name="Notice">通知</string>
    <string name="Shoppingcart">購物車</string>
    <string name="product_Name">產品名稱</string>
    <string name="tv_specification">規格</string>
    <string name="tv_Price">價格</string>
    <string name="Search">搜尋</string>
    <string name="searchPrompt">請輸入您想搜尋的商品</string>
    <string name="searchHistory">搜尋紀錄</string>
    <string name="clearSearch">清除搜尋紀錄</string>
    <string name="tvbuy">直接購買</string>

    <string name="nextpage">下一頁</string>
    <string name="chekall">全選</string>


    <string name="buyer_Info">購買人資訊</string>
    <string name="payvoid">付款資訊</string>
    <string name="default_Address">預設地址</string>
    <string name="buyer_name">姓名:</string>
    <string name="buyer_phone">電話:</string>
    <string name="default_data">預設</string>
    <string name="buyer_Address">地址:</string>
    <string name="new_address">新增地址</string>
    <string name="buyer_add_name">ex:王小明</string>
    <string name="buyer_add_phone">ex:0911111111</string>
    <string name="buy_confirm">新增</string>
    <string name="Nodata">購物車沒有東西～～</string>
    <string name="buyer_Info_Delivery">付款方式</string>

    <string name="textnofound">查無資料</string>
    <string name="textnolike">無追蹤商品</string>


    <string name="textConfirmPay">確認付款</string>
    <string name="textCannotUseGPay">Cannot use Google Pay</string>


    <!-- 填上TapPay Portal上註冊的資料 -->
    <!-- 開發者 > 應用程式 -->
    <string name="TapPay_AppID">17100</string>
    <string name="TapPay_AppKey">app_7WA1h08hDCJc5KNYZ2OeSYRraNFc20dNNA7GIkC0v7tAZnoSg7Y8EsKCinew</string>

    <!-- 帳戶資訊 -->
    <string name="TapPay_PartnerKey">partner_ky2g17lc28c95O6LCU0SU5vXjBs3FBmbSF3eKN4FqLEwviun4GK2K8M7</string>

    <!-- 商家管理 -->
    <string name="TapPay_MerchantName">TW_TAISHIN</string>
    <string name="TapPay_MerchantID">j4688821105_TAISHIN</string>
    <string name="textNoFound">NoFound</string>
    <string name="Fail">添加失敗</string>
    <string name="success">修改成功</string>
    <string name="NoticeFail">修改失敗</string>
    <string name="textNoNetwork">無網路</string>
    <string name="logout">登出</string>
    <string name="textDeleteFail">移除失敗</string>
    <string name="textDeleteSuccess">移除成功</string>
    <string name="spcardTotal">總金額：0</string>


    <string name="Sale_Notice">促銷訊息</string>
    <string name="QA_zNotice">貨態通知</string>
    <string name="system_Notice">系統公告</string>
    <string name="typeAccountId">請輸入帳號</string>
    <string name="typeName">請輸入姓名</string>
    <string name="typeAddress">請輸入地址</string>
    <string name="textInsertFail">註冊失敗</string>
    <string name="textInsertSuccess">註冊成功</string>

    <string name="textRegisterSuccess">註冊成功</string>
    <string name="registerSuccess">加入會員成功</string>
    <string name="backHome">返回首頁</string>
    <string name="loginsuccess">登入成功</string>


    <string name="logoutsuccess">登出成功</string>
    <string name="memberlogin">會員登入</string>
    <string name="modifyData">資料修改</string>
    <string name="personalInformation">個人資料</string>
    <string name="modifyPassword">密碼修改</string>


    <string name="textPickPhoto">從相簿中選擇</string>
    <string name="textTakePicture">拍照</string>
    <string name="textMemberId">使用者帳號</string>


    <string name="textVerify">驗證</string>
    <string name="textResend">重寄驗證碼</string>
    <string name="textInvalidCode">無效驗證碼</string>
    <string name="textEmptyError">欄位不能為空</string>
    <string name="textSend">Send</string>

    <string name="name">姓名</string>
    <string name="textModify">修改</string>
    <string name="accountId">使用者帳號</string>
    <string name="address">地址</string>
    <string name="phone">手機</string>

    <string name="textMessageEmpty">Empty</string>

    <string name="insertFollow">加入追蹤</string>
    <string name="deleteFollow">取消追蹤</string>
    <string name="textNoCameraApp">沒有照相App</string>
    <string name="textNoUserFound">找不到您的會員資料</string>
    <string name="textUpdateFail">修改失敗</string>
    <string name="textUpdateSuccess">修改成功</string>
    <string name="textOldPw">請輸入舊密碼:</string>
    <string name="textNewPw">請輸入新密碼：</string>
    <string name="textRePw">請再次輸入新密碼：</string>
    <string name="textWrongOldPassword">舊密碼不正確</string>
    <string name="searchtext">請輸入您想找的商品</string>
    <string name="accountID" />

    <string name="memberinfo">會員資料</string>

    <string name="productdetail">商品介紹</string>
    <string name="pleselogin">請登入會員</string>
    <string name="textProductId" />
    <string name="textLocationNotFound">無位址資訊</string>


</resources>
