<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OrderDetailFragment">

    <TextView
        android:id="@+id/tvOrderStatusText2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/textOrderStatusText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/rvOrderDetProList"
        app:layout_constraintTop_toBottomOf="@+id/rvOrderDetProList" />

    <TextView
        android:id="@+id/tvOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textHint"
        android:text="@string/textOrderStatus"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvOrderStatusText2"
        app:layout_constraintStart_toEndOf="@+id/tvOrderStatusText2"
        app:layout_constraintTop_toTopOf="@+id/tvOrderStatusText2"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tvOrderDIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textOrderIdText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/textHint"
        android:text="@string/textOrderId"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvOrderDIdText"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderDetProList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrderDIdText" />

    <TextView
        android:id="@+id/tvTotalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textTotalPriceText"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalPrice"
        app:layout_constraintTop_toBottomOf="@+id/rvOrderDetProList" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/textHint"
        android:text="@string/textTotalPrice"
        app:layout_constraintEnd_toEndOf="@+id/rvOrderDetProList"
        app:layout_constraintTop_toBottomOf="@+id/rvOrderDetProList" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="#fadde5"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvOrderDetProList">

        <TextView
            android:id="@+id/tvReceiverTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/textReceivePersonT"
            android:textColor="@color/colorGray"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOrderDNameT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textNameT"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:hint="@string/textHint"
                android:text="@string/textName"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOrderDPhoneNumT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textPhoneNumT"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPhoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:hint="@string/textHint"
                android:text="@string/textPhoneNum"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOderDetailAddressT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textOrderDAddressT"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:hint="@string/textHint"
                android:text="@string/textAddress"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>