<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ModifynameFragment">

    <TextView
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/appbar"
        android:gravity="center"
        android:text="@string/modify_information"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/no_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto">

        <Button
            android:id="@+id/btTakePicture"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#FFBEC9"
            android:layout_marginTop="8dp"
            android:text="@string/textTakePicture" />

        <Button
            android:id="@+id/btPickPicture"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="#FFBEC9"
            android:layout_marginTop="8dp"
            android:text="@string/textPickPhoto" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/textMemberId"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="12345"
        android:textColor="#0000FF"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/buyer_name"
        android:inputType="text"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/textOrderDAddressT"
        android:inputType="text"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/textPhoneNumT"
        android:inputType="phone"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="@+id/etAddress"
        app:layout_constraintStart_toStartOf="@+id/etAddress"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/textNo"
        app:layout_constraintEnd_toStartOf="@+id/btConfirm"
        app:layout_constraintTop_toTopOf="@+id/btConfirm" />

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textYes"
        android:background="#FADDE6"
        app:layout_constraintEnd_toEndOf="@+id/etPhone"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>