<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewPasswordFragment">

    <TextView
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/appbar"
        android:gravity="center"
        android:text="@string/modifyPassword"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewPasswordForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:hint="@string/textNewPw"
        android:inputType="textPassword"
        android:textColor="#0000FF"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/etRetypeNewPasswordForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/textRePw"
        android:inputType="textPassword"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="@+id/etNewPassword"
        app:layout_constraintStart_toStartOf="@+id/etNewPasswordForget"
        app:layout_constraintTop_toBottomOf="@+id/etNewPasswordForget" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/textNo"
        app:layout_constraintEnd_toStartOf="@+id/btConfirm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRetypeNewPasswordForget" />

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="#FADDE6"
        android:text="@string/textYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRetypeNewPasswordForget" />

</androidx.constraintlayout.widget.ConstraintLayout>



































