<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetpasswordFragment">

    <TextView
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/appbar"
        android:gravity="center"
        android:text="@string/forgetPassword"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTypePhonenumber2"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/typephonenumber"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTypeAccountId" />

    <EditText
        android:id="@+id/etTypeAccountId"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/typeAccountId"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/btSendVCode"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginBottom="148dp"
        android:background="#FADDE6"
        android:text="@string/sendVCode"
        android:textColor="#707070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>